Pn-4497 aggiunta copertura test